# llm-arch-sdk

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: basic_usage.py  langchain_example.py  langfuse_example.py  openai_example.py
src/llm_arch_sdk/adapters/: __init__.py  base.py  lang_adapter.py  llama_adapter.py  open_ai_adapter.py
src/llm_arch_sdk/auth/: token_manager.py
src/llm_arch_sdk/client/: base_client.py  chat_completions.py  completions.py  embeddings.py  llm_client.py
src/llm_arch_sdk/config/: settings.py
src/llm_arch_sdk/models/: chat_completion.py  completion.py  generation_settings.py  llm_response.py  stop_type.py  timings.py  usage.py
src/llm_arch_sdk/normalizers/: completion_detector.py  content_normalizer.py
src/llm_arch_sdk/observability/: __init__.py  bootstrap.py  context.py  helpers.py  langfuse_client.py  masking.py
src/llm_arch_sdk/transport/: auth_http_client_factory.py  circuit_breaker.py  http_client_factory.py
test/adapters/: test_lang_adapter.py  test_llama_adapter.py  test_openai_adapter.py
test/auth/: test_token_manager.py
test/client/: test_chat_completions.py  test_completions.py  test_embeddings.py  test_llm_client.py
test/models/: test_models.py
test/normalizers/: test_normalizers.py
test/transport/: test_circuit_breaker.py
