[project]
name = "llm-arch-sdk"
version = "0.1.0"
description = "SDK para consumir llama-server con autenticación y renovación de tokens"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Emeric Espiritu Santiago" }
]
dependencies = [
  "dotenv>=0.9.9",
  "httpx>=0.27.0",
  "openai>=2.15.0",
  "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
